--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivMain"
-        android:text="@string/BuySellTime"
+        android:text="@string/Market"
         />
     <ImageView
         android:id="@+id/ivMain"
