--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/market"
+        android:id="@id/mainFragment3"
         android:icon="@drawable/baseline_home_24"
         android:title="Home"/>
+    <item
+        android:id="@id/historyFragment2"
+        android:icon="@drawable/baseline_history_24"
+        android:title="History"/>
+    <item
+        android:id="@id/instruments"
+        android:icon="@drawable/baseline_build_24"
+        android:title="Instruments"/>
 </menu>
