--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,19 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_main"
-        app:navGraph="@navigation/nav_main"
+        app:navGraph="@navigation/nav_menu"
         android:name="androidx.navigation.fragment.NavHostFragment"
         app:defaultNavHost="true"
         >
 
     </androidx.fragment.app.FragmentContainerView>
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottomNav"
-        />
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
@@ -38,6 +31,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_bar"
-        android:scrollIndicators="left"/>
+        android:scrollIndicators="left"
+        app:itemPaddingBottom="10dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
