--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -15,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/marketFragment"
-        android:name="com.example.bestbuyselltime.MarketFragment"
+        android:name="com.example.bestbuyselltime.HistoryFragment"
         android:label="fragment_market"
-        tools:layout="@layout/fragment_market" />
+        tools:layout="@layout/fragment_history" />
 </navigation>
