--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -19,6 +19,7 @@
         app:cardCornerRadius="15dp"
         android:backgroundTint="@color/white">
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvHistory"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="25dp"
