--- a/app/src/main/res/layout/fragment_closeposition.xml
+++ b/app/src/main/res/layout/fragment_closeposition.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ClosePositionFragment">
+    tools:context=".ui.closeposition.ClosePositionFragment">
 
     <include layout="@layout/transaction_view"
         android:id="@+id/instruments_view"
